--- a/app/src/main/res/layout/fragment_strength_day_five.xml
+++ b/app/src/main/res/layout/fragment_strength_day_five.xml
@@ -91,7 +91,7 @@
             android:text="5 Sets of 2 heavy (relative) reps."
             android:layout_gravity="center_horizontal"
             android:layout_below="@+id/squatImage"
-            android:layout_above="@+id/ohp"
+            android:layout_above="@+id/legPressTitle"
             android:id="@+id/squatDescription"
             android:textColor="#ffffff"
             />
@@ -99,8 +99,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Overhead Press"
-            android:id="@+id/ohp"
+            android:text="Leg Press"
+            android:id="@+id/legPressTitle"
             android:textColor="#ffffff"
             android:textSize="32dp"
             android:layout_below="@+id/squatDescription"
@@ -113,8 +113,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/legpresspic"
-            android:src="@drawable/militarypress"
-            android:layout_below="@+id/ohp"
+            android:src="@drawable/legpress"
+            android:layout_below="@+id/legPressTitle"
             android:layout_above="@+id/legPressDescrpition"
             android:clickable="true"
             android:layout_gravity="center_horizontal"
