--- a/app/src/main/res/layout/fragment_track_progress.xml
+++ b/app/src/main/res/layout/fragment_track_progress.xml
@@ -46,6 +46,7 @@
                 android:id="@+id/spinner_dropdown"
                 android:layout_gravity="center_horizontal" />
 
+
             <ListView
             android:layout_width="wrap_content"
             android:layout_height="232dp"
@@ -54,6 +55,15 @@
             android:animateLayoutChanges="true"
 
             android:layout_gravity="center_horizontal|bottom" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Back"
+                android:id="@+id/trackprogressBack"
+                android:layout_gravity="left|bottom"
+
+                android:clickable="true" />
 
 </LinearLayout>
 
