--- a/app/src/main/res/layout/fragment_nutrition_cal.xml
+++ b/app/src/main/res/layout/fragment_nutrition_cal.xml
@@ -25,7 +25,7 @@
             android:id="@+id/wlossButton"
             android:layout_marginTop="20dp"
             android:layout_toStartOf="@+id/maintainButton"
-            />
+            android:textColor="#ec091d" />
 
         <Button
             android:layout_width="100dp"
