--- a/app/src/main/res/layout/fragment_points_page.xml
+++ b/app/src/main/res/layout/fragment_points_page.xml
@@ -2,7 +2,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/containerFitnessP"
-    android:background="@drawable/trophy">
+    android:background="@drawable/background3">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -54,6 +54,14 @@
             android:layout_above="@+id/PointsBack"
             android:layout_centerHorizontal="true"
             />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Leaderboard"
+            android:id="@+id/leaderButton"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true" />
 
 
     </RelativeLayout>
