--- a/app/src/main/res/layout/fragment_points_leader.xml
+++ b/app/src/main/res/layout/fragment_points_leader.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" tools:context="edu.sc.FitLivin.PointsLeader">
 
@@ -20,4 +20,4 @@
         android:layout_gravity="center" />
 
 
-</RelativeLayout>
+</FrameLayout>
