--- a/app/src/main/res/layout/fragment_points_page.xml
+++ b/app/src/main/res/layout/fragment_points_page.xml
@@ -4,17 +4,7 @@
     android:id="@+id/containerFitnessP"
     android:background="#ffffff">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:id="@+id/PointsView"
-            android:layout_gravity="center_vertical"
-            android:textColor="#ffe90e"
-            android:text="Points"
-            android:textSize="40dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -59,7 +49,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="You are #"
+        android:text="You are ranked # "
         android:id="@+id/YouAre"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
@@ -67,35 +57,40 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
         android:id="@+id/position"
+        android:textColor="#ffe90e"
         android:layout_alignParentTop="true"
         android:layout_toEndOf="@+id/YouAre" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="with"
+        android:text="with "
         android:id="@+id/with"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_below="@+id/YouAre"
+        android:layout_toLeftOf="@+id/PointsView"
+         />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="numberPts"
-        android:id="@+id/numberPts"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:id="@+id/PointsView"
+        android:layout_gravity="center_vertical"
+        android:textColor="#ffe90e"
+        android:text="Points"
+        android:layout_below="@+id/YouAre"
+        android:layout_centerHorizontal="true"
+
+        />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="points!"
+        android:text=" points!"
         android:id="@+id/points"
-        android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/PointsView" />
+        android:layout_toEndOf="@+id/PointsView"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/YouAre"/>
 
 
 </RelativeLayout>
