--- a/app/src/main/res/layout/fragment_profile__page.xml
+++ b/app/src/main/res/layout/fragment_profile__page.xml
@@ -2,8 +2,9 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/containerFitnessP"
-    android:background="@drawable/background3"
+    android:background="#ffffff"
     >
+
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -133,7 +134,7 @@
             android:layout_height="96dp"
             android:src="@drawable/ic_camera"
             app:civ_border_width="2dp"
-            app:civ_border_color="#c28585"
+            app:civ_border_color="#d10200"
             android:layout_below="@+id/name"
             android:layout_gravity="center_horizontal"
             android:layout_centerHorizontal="true" />
